# masai

./: README.md  main.py  pyproject.toml  requirements.txt
AILandingZoneSafety/: README.md  main.py  pyproject.toml
AI_Crop_Health_Monitoring/: README.md  main.py  pyproject.toml
AI_Crop_Health_Monitoring/documentation/: Original_Problem.md  QandA.md  classroom_simulation.md  concepts_explained.md  exam_preparation.md  interview_preparation.md  interview_questions.md  model_selection_justification.md  observations_and_conclusion.md  problem_statement.md
AI_Crop_Health_Monitoring/notebook/: ai_crop_health_monitoring.ipynb
AI_Crop_Health_Monitoring/outputs/: execution_output.md  field_validation_guide.txt  field_validation_samples.csv  improvement_metrics.csv  intervention_plan.csv  predictions.csv  priority_inspection_list.csv  reflection_comprehensive.txt
AI_Crop_Health_Monitoring/slides/: notebooklm_style_slides.md  slides.md
AI_Crop_Health_Monitoring/src/: ai_crop_health_monitoring.py
AI_Crop_Health_Monitoring/src/outputs/: drone_recommendations.txt  predictions.csv
AS21_LinearRegressionFundamentals/: AS21_LinearRegressionFundamentals1.md  AS21_LinearRegressionFundamentals2.md  AS21_LinearRegressionFundamentals3.md  AS21_LinearRegressionFundamentals_exam_preparation.md
AS23_RegressionModelEvaluation/: AS23_RegressionModelEvaluation1.md  AS23_RegressionModelEvaluation2.md  AS23_RegressionModelEvaluation3.md  AS23_RegressionModelEvaluation_exam_preparation.md
AS24_MultipleLinearRegression/: AS24_MultipleLinearRegression1.md  (+4 more)
Temp/: 2.txt  3.txt  4.txt  (+1 more)
(+410 files in other folders)
