[project]
name = "masai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "azure-ai-textanalytics==5.3.0",
    "azure-ai-vision-face==1.0.0b2",
    "azure-ai-vision-imageanalysis==1.0.0",
    "azure-cognitiveservices-speech==1.42.0",
    "azure-cognitiveservices-vision-customvision>=3.1.1",
    "azure-identity>=1.25.1",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "memory-profiler>=0.61.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.53.0",
]
